# SyncNotes

./: Cargo.toml
client/: Cargo.toml  build.rs
proto/: SyncNotes.proto
server/: Cargo.toml
server/src/: main.rs
server/src/services/: handlers.rs  mod.rs  models.rs  service.rs  sync.rs
