[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.16"
serde = { version = "1.0.196", features = ["derive"] }

[build-dependencies]
tonic-build.workspace = true